--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Hydrapp",
-  "short_name": "WTF: PWA",
+  "short_name": "hydrapp",
   "theme_color": "#000000",
   "background_color": "#000000",
   "display": "standalone",
